--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "fhir.js": "0.0.22",
     "next": "11.1.2",
+    "node-fetch": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
